# gramine-cli

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.cargo/: config.toml
.github/workflows/: build.yml  release.yml
src/: cli.rs  lib.rs  main.rs
src/app/: checker.rs  dumper.rs  generate_key.rs  mod.rs  types.rs
src/cmd/: mod.rs
src/cpu/: mod.rs
src/sgx/: checker.rs  mod.rs
testdata/: enclave.sig  quote.hex
