[package]
name = "gramine-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
lazy_static = "1.4.0"
openssl = "0.10.42"

[dependencies.encoding]
git = "https://github.com/sammyne/encoding-rs"
rev = "88230e3"
